k8s/base/frontend-deployment.yaml
# k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: task-manager-dev
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: task-manager-frontend:v0.1.0  # build + load tương tự backend
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests: {cpu: 50m, memory: 64Mi}
          limits: {cpu: 200m, memory: 128Mi}

        livenessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 30
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          failureThreshold: 2

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  internalTrafficPolicy: Local
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
